--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ build/
 
 ### STS ###
 helper/src/main/generated
+helper/src/main/resources/application.yml
 .apt_generated
 .classpath
 .factorypath
