--- a/helper/src/main/resources/application.yml
+++ b/helper/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 spring:
-  h2:    console:      enabled: true
+  h2:
+    console:
+      enabled: true
 
   datasource:
 #   url: jdbc:h2:tcp://localhost/~/helper
@@ -8,12 +10,16 @@ spring:
     password: 
     driver-class-name: org.h2.Driver
     
-  jpa:    hibernate:      ddl-auto: update
+  jpa:
+    hibernate:
+      ddl-auto: update
     #show-sql: true
     properties:
-      hibernate:        'format_sql' : true
+      hibernate:
+        'format_sql' : true
   
-  mail:    host: smtp.gmail.com
+  mail:
+    host: smtp.gmail.com
     port: 587
     username: 
     password: 
@@ -22,10 +28,17 @@ spring:
         smtp:
           auth: true
           starttls :
-            enable : true      
+            enable : true
+      
     
-  data:    web:      pageable:        default-page-size: 10
+  data:
+    web:
+      pageable:
+        default-page-size: 10
         one-indexed-parameters: true
       
-logging.level:    'org.hibernate.SQL' : debug
+logging.level:
+    'org.hibernate.SQL' : debug
+
+
     
